# NaiveChat

./: .gitignore  CMakeLists.txt
config/: config.json
src/: CMakeLists.txt
src/client/: ChatClient.cpp
src/include/: public.h
src/server/: CMakeLists.txt  ServerMain.cpp
src/server/controller/: UserController.cpp
src/server/dao/: FriendDAO.cpp  GroupDAO.cpp  OfflineMsgDAO.cpp  UserDAO.cpp
src/server/db/: DB.cpp
src/server/dispatcher/: HandlerMapping.cpp
src/server/include/common/: Handler.h  Singleton.h
src/server/include/controller/: ChatController.h  UserController.h
src/server/include/dao/: FriendDAO.h  GroupDAO.h  OfflineMsgDAO.h  UserDAO.h
src/server/include/db/: DB.h
src/server/include/dispatcher/: Dispatcher.h  HandlerMapping.h
src/server/include/model/: Group.h  GroupUser.h  OfflineMsg.h  User.h
src/server/include/net/: ChatServer.h
src/server/include/service/: FriendService.h  GroupService.h  MsgService.h  UserService.h
src/server/include/utils/: Connection.h  ConnectionPool.h  redis.h
src/server/net/: ChatServer.cpp
src/server/service/: FriendService.cpp  GroupService.cpp  MsgService.cpp  UserService.cpp
src/server/utils/: Connection.cpp  ConnectionPool.cpp  redis.cpp
